--- a/tf_environment.yml
+++ b/tf_environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - _py-xgboost-mutex=2.0
   - absl-py=1.4.*
   - aiohttp=3.8.*
   - aiosignal=1.3.*
@@ -76,8 +77,8 @@ dependencies:
   - exceptiongroup=1.1.*
   - executing=1.2.*
   - expat=2.5.*
-  - flatbuffers               23.3.*
-  - flit-core                 3.9.*
+  - flatbuffers=23.3.*
+  - flit-core=3.9.*
   - font-ttf-dejavu-sans-mono=2.37
   - font-ttf-inconsolata=3.000
   - font-ttf-source-code-pro=2.038
@@ -187,6 +188,7 @@ dependencies:
   - lime=0.2.0.*    
   - llvm-openmp=16.0.*
   - llvmlite=0.41.*
+  - lxml = 5.3.*
   - lz4-c=1.9.*
   - markdown=3.4.*
   - markupsafe=2.1.*
@@ -198,6 +200,7 @@ dependencies:
   - munkres=1.1.*
   - nbclient=0.8.*
   - nbconvert-core=7.7.*
+  - nbformat=5.9.*
   - ncurses=6.4
   - nest-asyncio=1.5.*
   - netcdf4=1.6.*
@@ -234,11 +237,13 @@ dependencies:
   - pthread-stubs=0.4
   - ptyprocess=0.7.*
   - pure_eval=0.2.*
+  - py-xgboost=2.0.*
   - pyasn1=0.4.*
   - pyasn1-modules=0.2.*
   - pycparser=2.21
   - pydot=1.4.*
   - pygments=2.15.*
+  - pyhdf=0.11.*
   - pyjwt=2.8.*
   - pyobjc-core=9.2
   - pyobjc-framework-cocoa=9.2
@@ -314,10 +319,12 @@ dependencies:
   - webencodings=0.5.*
   - websocket-client=1.6.*
   - werkzeug=2.3.*
+  - wget=3.*
   - wheel=0.40.*
   - widgetsnbextension=4.0.*
   - wrapt=1.15.*
   - xarray=024.1.*
+  - xgboost=2.0.*
   - xorg-libxau=1.0.*
   - xorg-libxdmcp=1.1.*
   - xz=5.2.*
